background fix detail page on mobile

--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -1,5 +1,8 @@
 .dark {
-    background-color: #4B5563;
+    background-color: black;
+   .card {
+        background-color: #4B5563;
+   }
 }
 
 .darkTable{
